[project]
name = "ui-testing-playground"
version = "0.1.0"
description = "UI Testing Playground demo using Playwright + pytest"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    {name = "GC", email = "germanchan9233@gmail.com"}
]

# ==================== Dependency ====================
[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-playwright>=0.7.2",
    "playwright>=1.45.0", 
    "pytest-html>=4.0.0",
    "pytest-xdist>=3.0.0",
]

# ==================== pytest config ====================
[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

# default options
addopts = [
    "-v",
    "--headed",                     
]

norecursedirs = [".git", "__pycache__", ".venv", "venv", "env"]

markers = [
    "smoke: smoke test",
    "regression: Regression test",
    "full: Full run",
]

# base URL
base_url = "http://uitestingplayground.com"


filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::pytest.PytestUnraisableExceptionWarning",
]

